--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/cli": "^5.0.1-alpha.2",
+    "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
@@ -16,14 +18,20 @@
     "expo-constants": "~8.0.0",
     "expo-mail-composer": "^8.1.0",
     "intl": "^1.2.5",
+    "logkitty": "0.7.1",
+    "metro": "0.66.0",
+    "metro-config": "0.66.0",
+    "metro-inspector-proxy": "0.66.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "0.64.1",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "y18n": "5.0.8",
+    "yargs": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
