--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "4.13",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
@@ -16,9 +17,10 @@
     "expo-constants": "~8.0.0",
     "expo-mail-composer": "^8.1.0",
     "intl": "^1.2.5",
+    "logkitty": "0.7.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "0.64.1",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
