--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
     "axios": "^0.21.1",
-    "expo": "~36.0.0",
+    "expo": "41.0.1",
+    "expo-asset": "8.3.2",
     "expo-constants": "~8.0.0",
     "expo-mail-composer": "^8.1.0",
     "intl": "^1.2.5",
@@ -25,7 +26,8 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "url-parse": "1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
